# server/src/user-informations/dtos/response-user-information.dto.ts
@@ -1,0 +1,3 @@
+import { UserInformationEntity } from '../entities/user-information.entity'
+
+export class UserInformationResponseDto extends UserInformationEntity {}
