# server/src/users/dtos/response-login-user.dto.ts
@@ -1,9 +1,14 @@
-import { ApiProperty } from '@nestjs/swagger'
+import { ApiProperty, PickType } from '@nestjs/swagger'
 import { Type } from 'class-transformer'
+import { UserInformationEntity } from 'src/user-informations/entities/user-information.entity'
 import { UserEntity } from '../entities/user.entity'
 import { UserSecretEntity } from '../entities/userSecret.entity'
 
 class SecretForResponseLoginUser extends UserSecretEntity {}
+
+class UserInformationForResponseMe extends PickType(UserInformationEntity, [
+  'id',
+]) {}
 
 export class ResponseLoginUserDto extends UserEntity {
   @Type(() => SecretForResponseLoginUser)
@@ -11,4 +16,8 @@ export class ResponseLoginUserDto extends UserEntity {
   secret: UserSecretEntity
 }
 
-export class ResponseMeDto extends UserEntity {}
+export class ResponseMeDto extends UserEntity {
+  @Type(() => UserInformationForResponseMe)
+  @ApiProperty({ type: UserInformationForResponseMe })
+  userInformation: UserInformationForResponseMe
+}
